# data-science-lab

./: .gitignore  pyproject.toml
algorithms/: linear_regression.ipynb
maths_for_deep_learning/: numpy.ipynb
pre-algebra-maths/: README.md  fractions.ipynb  numbers.ipynb
rlang/: advanced_matrices_indexing.R  arrays_and_matrices.R  assignment.R  lists.R  vectors.R
statistics/: types-of-variable.ipynb
