[project]
name = "data-science-lab"
version = "0.0.1"
description = ""
authors = [
    {name = "joegasewicz",email = "joegasewicz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
